appId: org.trustroots.nostroots
name: "Startup: welcome screen"
---
- openLink: "nostroots://e2e/reset"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          text: "Open"
          optional: true
          retryTapIfNoChange: true
      - tapOn:
          text: "Open"
          optional: true
          retryTapIfNoChange: true
- extendedWaitUntil:
    visible:
      id: "screen-welcome"
    timeout: 60000
- takeScreenshot: ".e2e-screenshots/welcome"
